Training: Edit Add new workflows

--- a/site/guide/workflows/_add-new-workflows.qmd
+++ b/site/guide/workflows/_add-new-workflows.qmd
@@ -70,24 +70,46 @@ a. Click **Add Finding Workflow** to save your blank workflow, and then [configu
 
 
 :::: {.content-hidden unless-format="revealjs"}
-To add a new blank workflow:
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-a. In the left sidebar, click **{{< fa gear >}} Settings**.
+1. Under Workspace, select **Workflows**.
 
-a. Under Workspace, select **Workflows**.
+1. Select the tab for the type of workflow to add:
 
-a. Click **{{< fa plus >}} Add Workflow**.
+    - **Model Workflows** — Workflows that apply to models in your inventory.
+    - **Finding Workflows** — Workflows that apply to logged findings.
 
-a. On the Add New Workflow modal, enter in a **[title]{.smallcaps}** and a **[description]{.smallcaps}** the workflow.
+#### Add Model Workflows
+
+a. Click **{{< fa plus >}} Add Model Workflow**.
+
+a. On the Add New Model Workflow modal, enter in a **[title]{.smallcaps}** and a **[description]{.smallcaps}** the workflow.
 
 a. Under **[workflow start]{.smallcaps}**, select when the workflow should be initiated:
 
-    - **Manually** — [Start this workflow manually.](/guide/workflows/manage-workflows.qmd#initiate-workflows){target="_blank"}
-    - **On Model Registration** — Start this workflow when a model is [registered in your model inventory](/guide/model-inventory/register-models-in-inventory.qmd){target="_blank"}.
-    - **On Model Field Change** — Start this workflow on a change to a [specific model inventory field](/guide/model-inventory/edit-model-inventory-fields.qmd){target="_blank"}.
+    - **Manually** — Start this workflow manually.
+    - **On Model Registration** — Start this workflow when a model is registered in your model inventory.
+    - **On Model Field Change** — Start this workflow on a change to a specific model inventory field.
 
 a. Under **[workflow expected duration]{.smallcaps}**, define the SLA for the workflow based on the start date in days, weeks, months, or years.
 
-a. Click **Add Workflow** to save your blank workflow, and then configure your workflow steps.
+a. Click **Add Model Workflow** to save your blank workflow, and then configure your workflow steps.
+
+#### Add Finding Workflows
+
+a. Click **{{< fa plus >}} Add Finding Workflow**.
+
+a. On the Add New Finding Workflow modal, enter in a **[title]{.smallcaps}** and a **[description]{.smallcaps}** the workflow.
+
+a. Under **[workflow start]{.smallcaps}**, select when the workflow should be initiated:
+
+    - **Manually** — Start this workflow manually.
+    - **On Finding Registration** — Start this workflow when a finding is logged on a model.
+
+a. Select the **[finding type]{.smallcaps}**
+
+a. Under **[workflow expected duration]{.smallcaps}**, define the SLA for the workflow based on the start date in days, weeks, months, or years.
+
+a. Click **Add Finding Workflow** to save your blank workflow, and then configure your workflow steps.
 
 ::::
