--- a/site/training/administrator-fundamentals/using-validmind-for-model-risk-management.qmd
+++ b/site/training/administrator-fundamentals/using-validmind-for-model-risk-management.qmd
@@ -215,7 +215,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-Configure model workflows
+Configure custom workflows
 
 ::: {.f5 .nt2 .pl2 .mb4}
 (Scroll down for the full instructions.)
