--- a/site/training/administrator-fundamentals/administrator-fundamentals-register.qmd
+++ b/site/training/administrator-fundamentals/administrator-fundamentals-register.qmd
@@ -35,7 +35,7 @@ listing:
     - path: organizational-oversight-reporting.html
       title: "Organizational Oversight & Reporting"
       subtitle: "Module 4"
-      description: "{{< fa check >}} Audit model activity <br> {{< fa check >}} Audit model workflows <br> {{< fa check >}} View and customize analytics"
+      description: "{{< fa check >}} Audit model activity <br> {{< fa check >}} Audit workflows <br> {{< fa check >}} View and customize analytics"
       reading-time: "25"
       author: "{{< var vm.product >}}"
     fields: [title, subtitle, description, reading-time]
