--- a/site/training/program/learning-paths.qmd
+++ b/site/training/program/learning-paths.qmd
@@ -190,7 +190,7 @@ Learn how to use {{< var vm.product >}} as an **administrator** to onboard your 
 #### <sup>Module 4</sup><br> Organizational Oversight & Reporting
 
 - Audit model activity
-- Audit model workflows
+- Audit workflows
 - View and customize analytics
 
 :::
