--- a/site/guide/workflows/_abort-workflows.qmd
+++ b/site/guide/workflows/_abort-workflows.qmd
@@ -23,7 +23,7 @@ To cancel a run of a workflow:
 
 #### On findings
 
-1. On the details page of your finding,^[[View and filter model findings](/guide/model-validation/view-filter-model-findings.qmdl#view-model-findings)] locate the [active workflows]{.smallcaps} section.
+1. On the details page of your finding,^[[View and filter model findings](/guide/model-validation/view-filter-model-findings.qmd#view-model-findings)] locate the [active workflows]{.smallcaps} section.
 
 1. Click on the name of the workflow you'd like to abort to open that specific workflow's details.
 
