--- a/site/guide/workflows/_review-active-workflows.qmd
+++ b/site/guide/workflows/_review-active-workflows.qmd
@@ -24,7 +24,7 @@ To review details for workflows currently active:
 
 #### On findings
 
-1. On the details page of your finding,^[[View and filter model findings](/guide/model-validation/view-filter-model-findings.qmdl#view-model-findings)] locate the [active workflows]{.smallcaps} section.
+1. On the details page of your finding,^[[View and filter model findings](/guide/model-validation/view-filter-model-findings.qmd#view-model-findings)] locate the [active workflows]{.smallcaps} section.
 
 1. Click on the name of any active workflow to review that specific workflow's details.
 
@@ -52,6 +52,8 @@ To review details for workflows currently active:
 :::: {.content-hidden unless-format="revealjs"}
 To review details for workflows currently active:
 
+#### On models
+
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
 1. Select a model or find your model [by applying a filter or searching for it](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models){target="_blank"}.
@@ -65,6 +67,18 @@ To review details for workflows currently active:
     - **Details** — Name and description (if present) of the workflow, the workflow's status and progress (if applicable), when it was created, and when it was started.
     - **Activity** — History of updates to the workflow on that model, including notes submitted during transitions.
     - **Findings** — Findings for that model created within the duration of that workflow's runtime.
+    - **Workflow** — Overview of the entire workflow. The current workflow step is highlighted on this view.
+
+#### On findings
+
+1. On the [details page of your finding](/guide/model-validation/view-filter-model-findings.qmd#view-model-findings){target="_blank"}, locate the [active workflows]{.smallcaps} section.
+
+1. Click on the name of any active workflow to review that specific workflow's details.
+
+1. Click on the tab you would like to review:
+
+    - **Details** — Name and description (if present) of the workflow, the workflow's status and progress (if applicable), when it was created, and when it was started.
+    - **Activity** — History of updates to the workflow on that finding, including notes submitted during transitions.
     - **Workflow** — Overview of the entire workflow. The current workflow step is highlighted on this view.
 
 ::::
