Training: Review workflow history

--- a/site/guide/workflows/_review-workflow-history.qmd
+++ b/site/guide/workflows/_review-workflow-history.qmd
@@ -46,22 +46,42 @@ If workflows are running or have previously run on your finding, you can:
 
 
 :::: {.content-hidden unless-format="revealjs"}
-Review a timeline of workflows running or previously run on a model:
+Review timelines of workflows running or previously run:
+
+#### On models
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
 2. Select a model or find your model [by applying a filter or searching for it](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models){target="_blank"}.
 
-3. On the landing page of your model, locate the Workflows section. If workflows are running or have previously run on your model, you can:
+3. On the landing page of your model, locate the Workflows section.
+
+    If workflows are running or have previously run on your model, you can:
 
     - Filter the view using the **[show]{.smallcaps}** drop-down menu to display only runs from specific workflows.
 
     - Click **{{< fa arrow-right-arrow-left >}} See All Workflows** to see records of workflows by status:
         - **Active** — Workflows currently running.
         - **Scheduled** — Workflows slated to run in the future.
-        - **Waiting** — Workflows in a [{{< fa clock >}} Wait state](/guide/workflows/setting-up-workflows.qmd#conditional-requirements){target="_blank"}.
-        - **Finished** — Workflows that have reached an [{{< fa circle-stop >}} End state](/guide/workflows/setting-up-workflows.qmd#workflow-step-types){target="_blank"}.
-        - **Aborted** — [Cancelled workflows.](/guide/workflows/manage-workflows.qmd#abort-workflows){target="_blank"}
-        - **Available** — Workflows available to be [run manually](/guide/workflows/manage-workflows.qmd#initiate-workflows){target="_blank"}.
+        - **Waiting** — Workflows in a {{< fa clock >}} Wait state.
+        - **Finished** — Workflows that have reached an {{< fa circle-stop >}} End state.
+        - **Aborted** — Cancelled workflows.
+        - **Available** — Workflows available to be run manually.
+
+#### On findings
+
+On the [details page of your finding](/guide/model-validation/view-filter-model-findings.qmd#view-model-findings){target="_blank"}, locate the [active workflows]{.smallcaps} section.
+
+If workflows are running or have previously run on your finding, you can:
+
+- Filter the view using the **[show]{.smallcaps}** drop-down menu to display only runs from specific workflows.
+
+- Click **{{< fa arrow-right-arrow-left >}} See All Workflows** to see records of workflows by status:
+    - **Active** — Workflows currently running.
+    - **Scheduled** — Workflows slated to run in the future.
+    - **Waiting** — Workflows in a {{< fa clock >}} Wait state.
+    - **Finished** — Workflows that have reached an {{< fa circle-stop >}} End state.
+    - **Aborted** — Cancelled workflows.
+    - **Available** — Workflows available to be run manually.
 
 ::::
