--- a/site/training/administrator-fundamentals/organizational-oversight-reporting.qmd
+++ b/site/training/administrator-fundamentals/organizational-oversight-reporting.qmd
@@ -106,7 +106,7 @@ Already logged in and refreshed this module? Click [{{< fa chevron-right >}}]() 
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-Review model workflows
+Review workflows
 
 ::: {.f5 .nt2 .pl2 .mb4}
 (Scroll down for the full instructions.)
