Training: Initiate workflows

--- a/site/guide/workflows/_initiate-workflows.qmd
+++ b/site/guide/workflows/_initiate-workflows.qmd
@@ -81,6 +81,12 @@ To manually resume a workflow in a {{< fa clock >}} Wait state:^[[Conditional re
 
 
 :::: {.content-hidden unless-format="revealjs"}
+To initiate workflows manually:
+
+::: {.panel-tabset}
+
+#### On models
+
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
 1. Select a model or find your model [by applying a filter or searching for it](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models){target="_blank"}.
@@ -95,5 +101,20 @@ To manually resume a workflow in a {{< fa clock >}} Wait state:^[[Conditional re
     - **Scheduled Run** — Set a future date to run the workflow.
 
 1. Click **{{< fa arrow-right >}} Run Workflow Now** to confirm.
+
+#### On findings
+
+1. On the [details page of your finding](/guide/model-validation/view-filter-model-findings.qmd#view-model-findings){target="_blank"}, locate the [active workflows]{.smallcaps} section.
+
+1. Click **{{< fa arrow-right-arrow-left >}} See All Workflows**.
+
+1. Select **{{< fa arrow-right >}} Run Workflow** for the workflow you'd like to initiate, then select your desired **[workflow start]{.smallcaps}** option:
+
+    - **Run Now** — Workflow starts instantly.
+    - **Scheduled Run** — Set a future date to run the workflow.
+
+1. Click **{{< fa arrow-right >}} Run Workflow Now** to confirm.
+
+:::
 
 ::::
