--- a/site/training/administrator-fundamentals/using-validmind-for-model-risk-management.qmd
+++ b/site/training/administrator-fundamentals/using-validmind-for-model-risk-management.qmd
@@ -266,8 +266,8 @@ To set up a new custom workflow, you'll need to complete these three steps in se
 **Add a model workflow**
 :::
 
-1. Click **{{< fa plus >}} Add Workflow**.
-2. On the Add New Workflow modal, enter in a **[title]{.smallcaps}** and a **[description]{.smallcaps}** the workflow.
+1. Click **{{< fa plus >}} Add Model Workflow**.
+2. On the Add New Model Workflow modal, enter in a **[title]{.smallcaps}** and a **[description]{.smallcaps}** the workflow.
 3. Under **[workflow start]{.smallcaps}**, select **Manually**.
 4. Under **[workflow expected duration]{.smallcaps}**, define the SLA for the workflow.
 5. Click **Add Workflow** to save your blank workflow.
@@ -302,11 +302,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-Run model workflows
-
-::: {.f5 .nt2 .pl2 .mb4}
-(Scroll down for the full instructions.)
-:::
+Run workflows
 
 ::: {.tc}
 [Learn more ...](/guide/workflows/manage-workflows.qmd){.button target="_blank"}
@@ -317,8 +313,6 @@ Run model workflows
 :::
 
 ::: {.column width="70%" .bl .pl4 .f3}
-
-Now, let's initiate our sample workflow manually:
 
 {{< include /guide/workflows/_initiate-workflows.qmd >}}
 
@@ -346,7 +340,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-Reset & abort model workflows
+Reset & abort workflows
 
 ::: {.f5 .nt2 .pl2 .mb4}
 (Scroll down for the full instructions.)
