Training: Reset workflows

--- a/site/training/administrator-fundamentals/using-validmind-for-model-risk-management.qmd
+++ b/site/training/administrator-fundamentals/using-validmind-for-model-risk-management.qmd
@@ -302,7 +302,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-Run workflows
+Run workflows manually
 
 ::: {.tc}
 [Learn more ...](/guide/workflows/manage-workflows.qmd){.button target="_blank"}
@@ -336,7 +336,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
-## {.scrollable .center}
+## {.scrollable}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
@@ -354,9 +354,9 @@ Reset & abort workflows
 
 :::
 
-::: {.column width="70%" .bl .pl4 .f3}
+::: {.column width="70%" .bl .pl4 .f4}
 
-As an administrator, you may need to reset or abort model workflows as required:
+As an administrator, you may need to reset or abort workflows as required:
 
 ::: {.panel-tabset}
 
