--- a/site/guide/workflows/_reset-workflows.qmd
+++ b/site/guide/workflows/_reset-workflows.qmd
@@ -39,13 +39,24 @@ To reset a workflow to the beginning:
 
 
 :::: {.content-hidden unless-format="revealjs"}
-To reset a model's workflow to the beginning:
+To reset a workflow to the beginning:
+
+#### On models
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
 1. Select a model or find your model [by applying a filter or searching for it](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models){target="_blank"}.
-
 1. On the landing page of your model, locate the [active workflows]{.smallcaps} section.
+
+1. Click on the name of the workflow you'd like to reset to open that specific workflow's details.
+
+1. On the workflow's detail modal, click on the **{{< fa ellipsis-vertical >}}** in the top-right hand corner and select **{{< fa ban >}} Abort Workflow**.
+
+1. On the confirmation page, toggle **[restart workflow after aborting]{.smallcaps}** on, then click **{{< fa arrow-right >}} Yes, Abort Workflow** to restart your workflow.
+
+#### On findings
+
+1. On the [details page of your finding](/guide/model-validation/view-filter-model-findings.qmd#view-model-findings){target="_blank"}, locate the [active workflows]{.smallcaps} section.
 
 1. Click on the name of the workflow you'd like to reset to open that specific workflow's details.
 
