--- a/site/guide/workflows/_abort-workflows.qmd
+++ b/site/guide/workflows/_abort-workflows.qmd
@@ -39,11 +39,13 @@ To cancel a run of a workflow:
 
 
 :::: {.content-hidden unless-format="revealjs"}
-To cancel a run of a workflow on a model:
+To cancel a run of a workflow:
+
+#### On models
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-1. Select a model or find your model [by applying a filter or searching for it](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models){target="_blank"}.
+1. Select a model or find your model by applying a filter or searching for it.^[[Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)]
 
 1. On the landing page of your model, locate the [active workflows]{.smallcaps} section.
 
@@ -53,5 +55,13 @@ To cancel a run of a workflow on a model:
 
 1. On the confirmation page, make sure **[restart workflow after aborting]{.smallcaps}** is untoggled, then click **{{< fa arrow-right >}} Yes, Abort Workflow** to abort your workflow.
 
+#### On findings
+
+1. On the details page of your finding,^[[View and filter model findings](/guide/model-validation/view-filter-model-findings.qmd#view-model-findings)] locate the [active workflows]{.smallcaps} section.
+1. Click on the name of the workflow you'd like to abort to open that specific workflow's details.
+
+1. On the workflow's detail modal, click on the **{{< fa ellipsis-vertical >}}** in the top-right hand corner and select **{{< fa ban >}} Abort Workflow**.
+
+1. On the confirmation page, make sure **[restart workflow after aborting]{.smallcaps}** is untoggled, then click **{{< fa arrow-right >}} Yes, Abort Workflow** to abort your workflow.
 
 ::::
