--- a/site/training/administrator-fundamentals/organizational-oversight-reporting.qmd
+++ b/site/training/administrator-fundamentals/organizational-oversight-reporting.qmd
@@ -44,7 +44,7 @@ This final module is part of a four-part series:
 
 ::: {.f2}
 1. [Audit model activity](#audit-model-activity)
-2. [Audit model workflows](#audit-model-workflows)
+2. [Audit workflows](#audit-workflows)
 3. [Work with analytics](#work-with-analytics)
 
 :::
@@ -100,7 +100,7 @@ Already logged in and refreshed this module? Click [{{< fa chevron-right >}}]() 
 
 {{< include /training/common-slides/_review-model-activity.qmd >}}
 
-# Audit model workflows {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# Audit workflows {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {.scrollable}
 
@@ -122,7 +122,7 @@ Review workflows
 
 ::: {.column width="70%" .bl .pl4 .f4}
 
-Review workflows associated with your models:
+Review workflows associated with your models or findings:
 
 ::: {.panel-tabset}
 ### Review active workflows
