--- a/site/training/administrator-fundamentals/using-validmind-for-model-risk-management.qmd
+++ b/site/training/administrator-fundamentals/using-validmind-for-model-risk-management.qmd
@@ -124,7 +124,7 @@ Let's continue our journey by learning how to **set up workflows** for your use 
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-Model workflow elements
+Workflow elements
 
 ::: {.f5 .nt2 .pl2 .mb4}
 (Scroll down for the full instructions.)
