--- a/site/guide/workflows/_abort-workflows.qmd
+++ b/site/guide/workflows/_abort-workflows.qmd
@@ -45,7 +45,7 @@ To cancel a run of a workflow:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-1. Select a model or find your model by applying a filter or searching for it.^[[Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)]
+1. Select a model or find your model [by applying a filter or searching for it](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models){target="_blank"}.
 
 1. On the landing page of your model, locate the [active workflows]{.smallcaps} section.
 
@@ -57,7 +57,8 @@ To cancel a run of a workflow:
 
 #### On findings
 
-1. On the details page of your finding,^[[View and filter model findings](/guide/model-validation/view-filter-model-findings.qmd#view-model-findings)] locate the [active workflows]{.smallcaps} section.
+1. On the [details page of your finding](/guide/model-validation/view-filter-model-findings.qmd#view-model-findings){target="_blank"}, locate the [active workflows]{.smallcaps} section.
+
 1. Click on the name of the workflow you'd like to abort to open that specific workflow's details.
 
 1. On the workflow's detail modal, click on the **{{< fa ellipsis-vertical >}}** in the top-right hand corner and select **{{< fa ban >}} Abort Workflow**.
