--- a/site/guide/workflows/_initiate-workflows.qmd
+++ b/site/guide/workflows/_initiate-workflows.qmd
@@ -1,6 +1,6 @@
 :::: {.content-visible unless-format="revealjs"}
 ::: {.callout}
-By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has sufficient permissions to manually start model workflows.
+By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has sufficient permissions to manually start workflows.
 :::
 
 To manually start workflows[^initiate-workflows]:
