--- a/site/guide/workflows/_review-workflow-history.qmd
+++ b/site/guide/workflows/_review-workflow-history.qmd
@@ -21,7 +21,7 @@ Review timelines of workflows running or previously run:
         - **Waiting** — Workflows in a {{< fa clock >}} Wait state.^[[Conditional requirements](/guide/workflows/setting-up-workflows.qmd#conditional-requirements)]
         - **Finished** — Workflows that have reached an {{< fa circle-stop >}} End state.^[[Workflow step types](/guide/workflows/setting-up-workflows.qmd#workflow-step-types)]
         - **Aborted** — Cancelled workflows.^[[Abort workflows](/guide/workflows/manage-workflows.qmd#abort-workflows)]
-        - **Available** — Workflows available to be run manually.^[[Initiate model workflows](/guide/workflows/manage-workflows.qmd#initiate-workflows)]
+        - **Available** — Workflows available to be run manually.^[[Initiate workflows](/guide/workflows/manage-workflows.qmd#initiate-workflows)]
 
 #### On findings
 
@@ -37,7 +37,7 @@ If workflows are running or have previously run on your finding, you can:
     - **Waiting** — Workflows in a {{< fa clock >}} Wait state.^[[Conditional requirements](/guide/workflows/setting-up-workflows.qmd#conditional-requirements)]
     - **Finished** — Workflows that have reached an {{< fa circle-stop >}} End state.^[[Workflow step types](/guide/workflows/setting-up-workflows.qmd#workflow-step-types)]
     - **Aborted** — Cancelled workflows.^[[Abort workflows](/guide/workflows/manage-workflows.qmd#abort-workflows)]
-    - **Available** — Workflows available to be run manually.^[[Initiate model workflows](/guide/workflows/manage-workflows.qmd#initiate-workflows)]
+    - **Available** — Workflows available to be run manually.^[[Initiate workflows](/guide/workflows/manage-workflows.qmd#initiate-workflows)]
 
 :::
 
