--- a/site/training/administrator-fundamentals/organizational-oversight-reporting.qmd
+++ b/site/training/administrator-fundamentals/organizational-oversight-reporting.qmd
@@ -142,7 +142,7 @@ Review workflows associated with your models or findings:
 
 :::: {.slideover--b .auto-collapse-10}
 ::: {.tc}
-**View model workflows**
+**View model workflow**
 :::
 
 1. Select the name of your model you registered for this course to open up the model details page.
