ooo figured out a neat conditional hack

--- a/site/guide/model-documentation/_submit-for-approval.qmd
+++ b/site/guide/model-documentation/_submit-for-approval.qmd
@@ -1,1 +1,16 @@
+:::: {.content-visible unless-format="revealjs"}
 When you're ready, verify your workflow's status, and then submit your model documentation or validation report for approval.
+
+::::
+
+
+:::: {.content-visible when-format="revealjs" when-meta="includes.developer"}
+When you're ready, verify your workflow's status, and then submit your model documentation for approval.
+
+::::
+
+
+:::: {.content-visible when-format="revealjs" unless-meta="includes.developer"}
+When you're ready, verify your workflow's status, and then submit your validation report for approval.
+
+::::
