Editing training slides

--- a/site/guide/workflows/_transition-workflows.qmd
+++ b/site/guide/workflows/_transition-workflows.qmd
@@ -36,7 +36,24 @@ To transition a workflow into next steps:
 
 ::::
 
-:::: {.content-hidden unless-format="revealjs"}
+:::: {.content-visible when-format="revealjs" when-meta="includes.developer"}
+To transition a workflow into next steps on models:
+
+1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
+
+1. Select a model or find your model [by applying a filter or searching for it](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models){target="_blank"}.
+
+1. On the landing page of your model, locate the [active workflows]{.smallcaps} section and the workflow you'd like to transition.
+
+1. If an action is available to your role, you'll see it listed under that workflow:
+
+    - Click **{{< fa arrow-right >}}** to open up the transition panel for your selected action. This arrow will be followed by the action name.
+    - Enter your **[notes]{.smallcaps}** and any other additional inventory fields then click **Submit**.
+
+::::
+
+
+:::: {.content-visible when-format="revealjs" unless-meta="includes.developer"}
 To transition a workflow into next steps:
 
 #### On models
@@ -61,6 +78,9 @@ To transition a workflow into next steps:
     - Click **{{< fa arrow-right >}}** to open up the transition panel for your selected action. This arrow will be followed by the action name.
     - Enter your **[notes]{.smallcaps}** and any other additional inventory fields then click **Submit**.
 
+::::
+
+:::: {.content-hidden unless-format="revealjs"}
 {{< include /guide/workflows/_transition-workflow-examples.qmd >}}
 
 ::::
