--- a/site/guide/workflows/_review-active-workflows.qmd
+++ b/site/guide/workflows/_review-active-workflows.qmd
@@ -49,7 +49,29 @@ To review details for workflows currently active:
 
 ::::
 
-:::: {.content-hidden unless-format="revealjs"}
+
+:::: {.content-visible when-format="revealjs" when-meta="includes.developer"}
+To review details for workflows currently active on models:
+
+1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
+
+1. Select a model or find your model [by applying a filter or searching for it](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models){target="_blank"}.
+
+1. On the landing page of your model, locate the [active workflows]{.smallcaps} section.
+
+1. Click on the name of any active workflow to review that specific workflow's details.
+
+1. Click on the tab you would like to review:
+
+    - **Details** — Name and description (if present) of the workflow, the workflow's status and progress (if applicable), when it was created, and when it was started.
+    - **Activity** — History of updates to the workflow on that model, including notes submitted during transitions.
+    - **Findings** — Findings for that model created within the duration of that workflow's runtime.
+    - **Workflow** — Overview of the entire workflow. The current workflow step is highlighted on this view.
+
+::::
+
+
+:::: {.content-visible when-format="revealjs" unless-meta="includes.developer"}
 To review details for workflows currently active:
 
 #### On models
@@ -82,5 +104,6 @@ To review details for workflows currently active:
     - **Workflow** — Overview of the entire workflow. The current workflow step is highlighted on this view.
 
 ::::
+
 
 
