Updating single-source templates

--- a/internal/templates/single-source/_guides-vs-training.qmd
+++ b/internal/templates/single-source/_guides-vs-training.qmd
@@ -1,4 +1,4 @@
-<!-- REPLACE WITH YOUR ACTUAL INSTRUCTIONS -->
+<!-- REPLACE WITH YOUR ACTUAL INSTRUCTIONS / LOGIC -->
 
 
 <!-- VISIBLE IN USER GUIDES ONlY -->
