Edit: Register models in inventory

--- a/site/guide/model-inventory/register-models-in-inventory.qmd
+++ b/site/guide/model-inventory/register-models-in-inventory.qmd
@@ -27,7 +27,7 @@ Register models with {{< var vm.product >}} as the first step towards streamlini
 
 ::: {.panel-tabset}
 
-#### Basic Model Information
+#### 1. Basic Model Information
 
 If no additional fields are required on creation for your models:
 
@@ -35,27 +35,34 @@ a.  Provide the information outlined in the basic model information fields table
 
 b. Click **Register Model** to create a new entry in the model inventory.
 
-| Field | Description | 
+c. Click **Next {{< fa angle-right >}}** to continue to assignment of model stakeholders.[^4]
+
+| Field | Description |
 |---:|---|
 | [model name]{.smallcaps} | The name of your model. |
-| [group]{.smallcaps}  | (conditional) If you belong to multiple user groups,[^4] select the group that can see the model. |
-| [what type of model is it?]{.smallcaps}  | Whether the model is a new model, or an existing model. |
-| [template]{.smallcaps}  (conditional) | New models require a **Template**[^5] to be selected. |
-| [model status]{.smallcaps}  (conditional) | Existing models require a **Model Status** to be selected. |
+| [group]{.smallcaps}  | (conditional) If you belong to multiple user groups,[^5] select the group that can see the model. |
 | [business unit]{.smallcaps}  | Business unit associated with the model. |
 | [use case]{.smallcaps}  | The model's use case. |
-| [is it a vendor model?]{.smallcaps}  (optional) | If the model is a vendor model, toggle **Is Vendor Model**.[^6] |
+| [is it a vendor model]{.smallcaps}[?]{.smallercaps}  (optional) | If the model is a vendor model, toggle **Is Vendor Model**.[^6] |
 | [vendor name]{.smallcaps}  (conditional) | If the model is a vendor model, provide the vendor's name. |
 | [purpose]{.smallcaps}  | Explain what the model will be used for. |
 | [preliminary risk tier]{.smallcaps}  | Assign a preliminary risk tier. |
-| [owners]{.smallcaps}  (optional) |  Assign another or additional model owners. |
 : **Basic model information** fields {.hover tbl-colwidths="[30,70]"}
 
-#### Additional Model Information
+#### 2. Model Stakeholders
+
+a. Select the model stakeholders to add to the model upon registration.
+
+  - By default, only **[model owner]{.smallcaps}**s are required.
+  - Additional optional model stakeholders can be configured by your customer admin.
+
+b. Click **Next {{< fa angle-right >}}** to continue to additional model information (if required), or **Register Model** to create a new entry in the model inventory.
+
+#### 3. Additional Model Information
 
 If additional fields are required on model registration for your organization:
 
-a. First enter the basic model information, then click **Next {{< fa chevron-right >}}**.
+a. First enter the basic model information and assign model stakeholders, then click **Next {{< fa chevron-right >}}**.
 
 b. Fill in your organization's required additional fields.
 
@@ -72,8 +79,8 @@ c. Click **Register Model** to create a new entry in the model inventory.
 
 [^3]: [Manage model inventory fields](manage-model-inventory-fields.qmd)
 
-[^4]: [Manage groups](/guide/configuration/manage-groups.qmd)
+[^4]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
 
-[^5]: [Working with document templates](/guide/templates/working-with-document-templates.qmd)
+[^5]: [Manage groups](/guide/configuration/manage-groups.qmd)
 
-[^6]: [Vendor model](/about/glossary/glossary.qmd#vendor-model)
+[^6]: [Vendor model](/about/glossary/glossary.qmd#vendor-model) -->
