Quickstart: Register model developer

--- a/site/get-started/developer/quickstart-developer.qmd
+++ b/site/get-started/developer/quickstart-developer.qmd
@@ -19,26 +19,38 @@ aliases:
   - ../platform/explore-sample-model-documentation.html
   - ../platform/register-your-first-model.html
   - ../platform/generate-documentation-for-your-model.html
+includes:
+   developer: true
 ---
 
 Register your first model, use the {{< var validmind.developer >}} to run tests and document a model, then review your generated model documentation within the {{< var validmind.platform >}}.
 
 {{< include /get-started/common-steps/_before-you-begin.qmd >}}
 
-## Register your first model
-
 The first step to using {{< var vm.product >}} to develop models is to register them in your model inventory:
+
+::: {.panel-tabset}
+
+#### 1. Register a model
 
 {{< include /get-started/common-steps/_register-your-first-model.qmd >}}
 
-::: {.column-margin}
-![Registration modal with the options filled out for the model development quickstart](developer-new-model.png){width=90% fig-alt="A screenshot showing the registration modal with the options filled out for the model development quickstart" .screenshot}
-:::
+#### 2. Select a documentation template
+
+a. On the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select **Documentation**.
+
+b. Under [template]{.smallcaps}, select `Binary classification`.
+
+c. Click **Use Template** to apply the template.
+
+#### 3. Get your code snippet
 
 {{< include /get-started/common-steps/_get-your-code-snippet.qmd >}}
 
-::: {.column-margin}
+<!-- ::: {.column-margin}
 ![{{< fa rocket >}} Getting Started page with a sample code snippet](developer-code-snippet.png){width=90% fig-alt="A screenshot showing the Getting Started page with a sample code snippet" .screenshot}
+::: -->
+
 :::
 
 ## Using the {{< var validmind.developer >}}
