--- a/site/guide/model-inventory/register-models-in-inventory.qmd
+++ b/site/guide/model-inventory/register-models-in-inventory.qmd
@@ -54,7 +54,7 @@ c. Click **Next {{< fa angle-right >}}** to continue to assignment of model stak
 a. Select the model stakeholders to add to the model upon registration.
 
   - By default, only **[model owner]{.smallcaps}**s are required.
-  - Additional optional model stakeholders can be configured by your customer admin.
+  - Additional optional or required model stakeholders can be configured by your customer admin.
 
 b. Click **Next {{< fa angle-right >}}** to continue to additional model information (if required), or **Register Model** to create a new entry in the model inventory.
 
