--- a/site/get-started/common-steps/_register-your-first-model.qmd
+++ b/site/get-started/common-steps/_register-your-first-model.qmd
@@ -1,11 +1,57 @@
-1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
+:::: {.content-visible unless-format="revealjs" when-meta="includes.developer"}
+a. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-1. Click **{{< fa plus >}} Register New Model**.
+a. Click **{{< fa plus >}} Register New Model**.
 
-1. To register a model for use with this quickstart, select:
+a. To register a model for use with this quickstart, select:
 
-   - [what type of model is it?]{.smallcaps} — `New Model`
-   - [template]{.smallcaps} — `Binary classification`
-   - [use case]{.smallcaps} — `Attrition/Churn Management`
+   - **[what type of model is it]{.smallcaps}[?]{.smallercaps}**  — `New Model`
+   - **[use case]{.smallcaps}** — `Attrition/Churn Management`
 
-1. Click **Register Model** to add the model to your inventory.
+a. Click **Next {{< fa angle-right >}}** to continue to assignment of model stakeholders.
+
+a. Select your own name under the **[model owner]{.smallcaps}** drop-down.
+
+a. Click **Register Model** to add the model to your inventory.
+
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-50-ns}
+
+![Registration modal with the options filled out for the model development quickstart](developer-new-model.png){fig-alt="A screenshot showing the registration modal with the options filled out for the model development quickstart" .screenshot group="developer-registration"}
+
+:::
+
+::: {.w-40-ns}
+
+![Model stakeholder selection step](/get-started/common-steps/select-model-owner.png){fig-alt="A screenshot showing the model stakeholder selection step" .screenshot group="developer-registration"}
+
+:::
+
+::::
+
+
+::::
+
+
+:::: {.content-visible unless-format="revealjs" unless-meta="includes.developer"}
+a. In the left sidebar, click **{{< fa cubes >}} Inventory**.
+
+a. Click **{{< fa plus >}} Register New Model**.
+
+a. To register a model for use with this quickstart, select:
+
+   - **[what type of model is it]{.smallcaps}[?]{.smallercaps}**  — `New Model`
+   - **[use case]{.smallcaps}** — `Attrition/Churn Management`
+
+a. Click **Next {{< fa angle-right >}}** to continue to assignment of model stakeholders.
+
+a. Select your own name under the **[model owner]{.smallcaps}** drop-down — don't worry, we'll adjust these permissions later for validation.
+
+a. Click **Register Model** to add the model to your inventory.
+
+::::
+
+
+
+
