Quickstart: Register model validator

--- a/site/get-started/common-steps/_register-your-first-model.qmd
+++ b/site/get-started/common-steps/_register-your-first-model.qmd
@@ -50,6 +50,22 @@ a. Select your own name under the **[model owner]{.smallcaps}** drop-down — do
 
 a. Click **Register Model** to add the model to your inventory.
 
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-50-ns}
+
+![Registration modal with the options filled out for the model validation quickstart](validator-new-model.png){fig-alt="A screenshot showing the registration modal with the options filled out for the model validation quickstart" .screenshot group="validator-registration"}
+
+:::
+
+::: {.w-40-ns}
+
+![Model stakeholder selection step](/get-started/common-steps/select-model-owner.png){fig-alt="A screenshot showing the model stakeholder selection step" .screenshot group="validator-registration"}
+
+:::
+
+::::
+
 ::::
 
 
