--- a/site/get-started/developer/quickstart-developer.qmd
+++ b/site/get-started/developer/quickstart-developer.qmd
@@ -27,6 +27,8 @@ Register your first model, use the {{< var validmind.developer >}} to run tests 
 
 {{< include /get-started/common-steps/_before-you-begin.qmd >}}
 
+## Register a model for development
+
 The first step to using {{< var vm.product >}} to develop models is to register them in your model inventory:
 
 ::: {.panel-tabset}
@@ -37,11 +39,7 @@ The first step to using {{< var vm.product >}} to develop models is to register 
 
 #### 2. Select a documentation template
 
-a. On the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select **Documentation**.
-
-b. Under [template]{.smallcaps}, select `Binary classification`.
-
-c. Click **Use Template** to apply the template.
+{{< include /get-started/common-steps/_select-template.qmd >}}
 
 #### 3. Get your code snippet
 
