Updating code snippet images

--- a/site/get-started/common-steps/_select-template.qmd
+++ b/site/get-started/common-steps/_select-template.qmd
@@ -1,6 +1,6 @@
 :::: {.content-visible unless-format="revealjs" when-meta="includes.developer"}
 
-a. On the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select **Documentation**.
+a. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select **Documentation**.
 
 b. Under **[template]{.smallcaps}**, select `Binary classification`.
 
@@ -14,13 +14,13 @@ c. Click **Use Template** to apply the template.
 
 
 :::: {.content-visible unless-format="revealjs" unless-meta="includes.developer"}
-a. On the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select **Validation Report**.
+a. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select **Validation Report**.
 
 a. Under **[template]{.smallcaps}**, select `Generic Validation Report`.
 
 c. Click **Use Template** to apply the template.
 
-![Validation report template selection](documentation-template-selection.png){fig-alt="A screenshot showing the validation report template selection" .screenshot}
+![Validation report template selection](validation-template-selection.png){fig-alt="A screenshot showing the validation report template selection" .screenshot}
 
 
 ::::
