--- a/site/get-started/developer/quickstart-developer.qmd
+++ b/site/get-started/developer/quickstart-developer.qmd
@@ -27,7 +27,7 @@ Register your first model, use the {{< var validmind.developer >}} to run tests 
 
 {{< include /get-started/common-steps/_before-you-begin.qmd >}}
 
-## Register a model for development
+## Register your first model
 
 The first step to using {{< var vm.product >}} to develop models is to register them in your model inventory:
 
