--- a/site/get-started/validator/quickstart-validator.qmd
+++ b/site/get-started/validator/quickstart-validator.qmd
@@ -22,7 +22,7 @@ Use the {{< var validmind.developer >}} to run tests and validate a model, then 
 
 Typically, you will be asked to validate a champion model that has already been independently registered in the model inventory and submitted to you.
 
-#### 1. Register a model in the inventory
+#### 1. Register a model
 
 For this quickstart, you'll register a dummy model first and assign yourself as the validator to familiarize you with the {{< var validmind.platform >}} interface:
 
@@ -64,10 +64,6 @@ b. Click **Save** to apply your changes to that role.
 #### 4. Get your code snippet
 
 {{< include /get-started/common-steps/_get-your-code-snippet.qmd >}}
-
-::: {.column-margin}
-![{{< fa rocket >}} Getting Started page with a sample code snippet](validator-code-snippet.png){width=90% fig-alt="A screenshot showing the Getting Started page with a sample code snippet" .screenshot}
-:::
 
 ## Using the {{< var validmind.developer >}}
 
