--- a/site/get-started/common-steps/_get-your-code-snippet.qmd
+++ b/site/get-started/common-steps/_get-your-code-snippet.qmd
@@ -1,5 +1,24 @@
+
+
+:::: {.content-visible unless-format="revealjs" when-meta="includes.developer"}
 Before we move on, let's also retrieve the unique *code snippet* for your model that enables you to connect your testing environment with the correct model in the {{< var validmind.platform >}}:
 
 a. In the left sidebar that appears for your model, click **{{< fa rocket >}} Getting Started**.
 
 a. Locate the code snippet and click **{{< fa regular copy >}} Copy snippet to clipboard**.
+
+![{{< fa rocket >}} Getting Started page with a sample code snippet](developer-code-snippet.png){width=90% fig-alt="A screenshot showing the Getting Started page with a sample code snippet" .screenshot}
+
+::::
+
+
+:::: {.content-visible unless-format="revealjs" unless-meta="includes.developer"}
+Before we move on, let's also retrieve the unique *code snippet* for your model that enables you to connect your testing environment with the correct model in the {{< var validmind.platform >}}:
+
+a. In the left sidebar that appears for your model, click **{{< fa rocket >}} Getting Started**.
+
+a. Locate the code snippet and click **{{< fa regular copy >}} Copy snippet to clipboard**.
+
+![{{< fa rocket >}} Getting Started page with a sample code snippet](validator-code-snippet.png){width=90% fig-alt="A screenshot showing the Getting Started page with a sample code snippet" .screenshot}
+
+::::
