Admin training: Register demo model

--- a/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
+++ b/site/training/administrator-fundamentals/customizing-your-model-inventory.qmd
@@ -101,8 +101,8 @@ For this training course, you'll register a dummy model via the **{{< fa plus >}
 :::: {.slideover--r .three-quarters .auto-collapse-10}
 **Register a new model**
 
-1. Select the option for a **New Model**.
-2. You can fill in other options according to your preference.
+1. Enter in some details for your sample model, then click **Next {{< fa angle-right >}}**.
+2. Select your own name under the **[model owner]{.smallcaps}** drop-down.
 3. Click **Register Model** to add the model to your inventory.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
