Validator training: Register demo model

--- a/site/get-started/common-steps/_register-your-first-model.qmd
+++ b/site/get-started/common-steps/_register-your-first-model.qmd
@@ -5,7 +5,7 @@ a. Click **{{< fa plus >}} Register New Model**.
 
 a. To register a model for use with this quickstart, select:
 
-   - **[what type of model is it]{.smallcaps}[?]{.smallercaps}**  — `New Model`
+   - **[business unit]{.smallcaps}**  — `Finance`
    - **[use case]{.smallcaps}** — `Attrition/Churn Management`
 
 a. Click **Next {{< fa angle-right >}}** to continue to assignment of model stakeholders.
@@ -41,7 +41,7 @@ a. Click **{{< fa plus >}} Register New Model**.
 
 a. To register a model for use with this quickstart, select:
 
-   - **[what type of model is it]{.smallcaps}[?]{.smallercaps}**  — `New Model`
+   - **[business unit]{.smallcaps}**  — `Finance`
    - **[use case]{.smallcaps}** — `Attrition/Churn Management`
 
 a. Click **Next {{< fa angle-right >}}** to continue to assignment of model stakeholders.
