--- a/site/training/common-slides/_register-sample-model.qmd
+++ b/site/training/common-slides/_register-sample-model.qmd
@@ -1,3 +1,5 @@
+:::: {.content-visible when-format="revealjs" when-meta="includes.developer"}
+
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory/?register=open" background-interactive="true" data-preload="yes"}
 
 ::: {.slideover--r .three-quarters .auto-collapse-10}
@@ -8,5 +10,26 @@
 3. Click **Register Model** to add the model to your inventory.
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
+
+::::
+
+
+::::
+
+
+:::: {.content-visible when-format="revealjs" unless-meta="includes.developer"}
+
+## {background-iframe="https://app.prod.validmind.ai/model-inventory/?register=open" background-interactive="true" data-preload="yes"}
+
+::: {.slideover--r .three-quarters .auto-collapse-10}
+**Register a sample model**
+
+1. Enter in some details for your sample model, then click **Next {{< fa angle-right >}}**.
+2. Select your own name under the **[model owner]{.smallcaps}** drop-down — don't worry, we'll adjust these permissions next for validation.
+3. Click **Register Model** to add the model to your inventory.
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
+::::
 
 ::::
