--- a/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
+++ b/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
@@ -189,6 +189,24 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
+## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
+
+:::: {.slideover--b .auto-collapse-10}
+::: {.tc}
+**Apply a report template**
+:::
+
+Next, let's select a validation report template. A template predefines sections for your report and provides a general outline to follow, making the validation process much easier.
+
+1. Click on the name of the model you registered earlier.
+2. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select **Validation Report**.
+3. Under **[template]{.smallcaps}**, select `Generic Validation Report`.
+4. Click **Use Template** to apply the template.
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
+::::
+
 # Connect to a model {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 {{< include /training/common-slides/_get-your-code-snippet.qmd >}}
