--- a/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
+++ b/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
@@ -26,6 +26,8 @@ title-slide-attributes:
   data-background-color: "#083E44"
   data-background-image: "../assets/home-hero.svg"
 skip_preview: true
+includes:
+  developer: true
 ---
 
 # Learning objectives {.center}
