--- a/site/guide/model-inventory/register-models-in-inventory.qmd
+++ b/site/guide/model-inventory/register-models-in-inventory.qmd
@@ -41,8 +41,8 @@ c. Click **Next {{< fa angle-right >}}** to continue to assignment of model stak
 |---:|---|
 | [model name]{.smallcaps} | The name of your model. |
 | [group]{.smallcaps}  | (conditional) If you belong to multiple user groups,[^5] select the group that can see the model. |
-| [business unit]{.smallcaps}  | Business unit associated with the model. |
-| [use case]{.smallcaps}  | The model's use case. |
+| [business unit]{.smallcaps}  | Business unit[^6] associated with the model. |
+| [use case]{.smallcaps}  | The model's use case.[^7] |
 | [is it a vendor model]{.smallcaps}[?]{.smallercaps}  (optional) | If the model is a vendor model, toggle **Is Vendor Model**.[^6] |
 | [vendor name]{.smallcaps}  (conditional) | If the model is a vendor model, provide the vendor's name. |
 | [purpose]{.smallcaps}  | Explain what the model will be used for. |
@@ -83,4 +83,8 @@ c. Click **Register Model** to create a new entry in the model inventory.
 
 [^5]: [Manage groups](/guide/configuration/manage-groups.qmd)
 
-[^6]: [Vendor model](/about/glossary/glossary.qmd#vendor-model) -->
+[^6]: [Manage business units](/guide/configuration/set-up-your-organization.qmd#manage-business-units)
+
+[^7]: [Manage use cases](/guide/configuration/set-up-your-organization.qmd#manage-use-cases)
+
+[^8]: [Vendor model](/about/glossary/glossary.qmd#vendor-model)
